# temps3

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  DOCS.md  README.md  install.ps1  install.sh
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/credentials/: mod.rs
src/error/: mod.rs
src/s3/: mod.rs
src/storage/: mod.rs
tests/: integration_tests.rs
